# adversarial-2

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: main.typ
src/: adversarial_search.py  competitive_env.py  competitive_world.py  main.py
tests/: competitive_graph.py  test_alpha_beta.py  test_expectimax.py  test_mdp.py  test_minimax.py
