[project]
name = "2-adversarial"
version = "0.1.0"
authors = [{ name = "Yannick Molinghen", email = "yannick.molinghen@ulb.be" }]
description = ""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "laser-learning-environment>=1.4.0",
    "matplotlib>=3.9.2",
    "pytest>=8.3.3",
]


[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
# Check https://beta.ruff.rs/docs/rules/ for all rules
fixable = ["ALL"]

# Do not fix imports automatically (it removes unused imports in __init__.py files)
# unfixable = ["F401"]
line-length = 140
